--- a/package.json
+++ b/package.json
@@ -3,18 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "hbs": "^4.1.2",
+    "heroku": "^7.57.0",
     "http-errors": "~1.6.3",
-    "ink-html": "^1.0.4",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.0",
-    "nodemon": "^2.0.12",
     "sequelize": "^6.6.5"
   }
 }
